--- a/web/html-intro/index.html
+++ b/web/html-intro/index.html
@@ -4,42 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML Intro</title>
-
-    <style>
-        /* Element selector */
-        h1, h6, #hobbies { 
-            color: rgb(224, 154, 56);
-            background-color: rgb(82, 4, 239)
-        }
-
-        p {
-            color: purple;
-            background-color: aquamarine;
-        }
-
-        /* ID selector */
-        #hobbies {
-            border: 4px solid salmon;
-        }
-
-        /* Apply to all li elements that are children of #hobbies 
-        (i.e. any element with that id) */
-        #hobbies li {
-            background: lightblue
-        }
-
-        /* pseudo selector */
-        li:hover {
-            background: pink;
-        }
-
-        /* Class selector */
-        .big {
-            font-size: 2em;
-        }
-
-    </style>
-
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Heading 1</h1>
