--- a/javascript/callbacks/index.html
+++ b/javascript/callbacks/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Callbacks</title>
+    <!-- <script async defer src="script2.js"></script> -->
     <script async defer src="script.js"></script>
-    <script async defer src="promises.js"></script>
+    <!-- <script async defer src="promises.js"></script> -->
 </head>
 <body>
     <!-- <h1>Callbacks</h1> -->
